Add module-info in Java 8-compatible manner